Remove saving of plots from notebook.

--- a/cosmic_web_persistence_demo.ipynb
+++ b/cosmic_web_persistence_demo.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "4785a058",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
     "ax.set_xlabel('Filtration value')\n",
     "ax.set_ylabel(r'$\\beta_i$')\n",
     "fig.gca().add_artist(legend1)\n",
-    "fig.savefig('Betti_curve_evolution.png',bbox_inches='tight')\n",
+    "# fig.savefig('Betti_curve_evolution.png',bbox_inches='tight')\n",
     "\n",
     "# Parameter evolution\n",
     "color_dict = {0: 'r', 1: 'xkcd:goldenrod', 2: 'b'}\n",
@@ -244,16 +244,8 @@
     "ax[0,0].invert_xaxis()\n",
     "ax[1,0].set_xlabel('Redshift')\n",
     "ax[1,1].set_xlabel('Redshift')\n",
-    "fig.savefig('Parameter_curve_evolution.png',bbox_inches='tight')\n"
+    "# fig.savefig('Parameter_curve_evolution.png',bbox_inches='tight')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c977357",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
