Reset cells in notebook.

--- a/cosmic_web_persistence_demo.ipynb
+++ b/cosmic_web_persistence_demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "b8e68a95",
    "metadata": {},
    "outputs": [],
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "a630d67c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5fc422545a941ca8a34519af283cb7c",
+       "model_id": "05ad7c42863c4af49db66022fc392552",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "26b3b05a",
    "metadata": {},
    "outputs": [
@@ -134,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "bc6f805f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c97572e909b1483e9fa8151f2fade631",
+       "model_id": "9a1ae0fb237d458a8d9be180f3c06901",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "c44715fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8853b4092eeb4ac880b971fe62c82242",
+       "model_id": "9eac53fa1499496eadb4cd3ec31eb937",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,17 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "0bd7603c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fad77a0b490>"
+       "<matplotlib.legend.Legend at 0x7fb63c3939d0>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -336,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "4785a058",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5b30b5d589a4f4ebddb4beb05786ec4",
+       "model_id": "66b431802fc84c87a12c8731458eaf13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "b9f90480",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "834f17e9",
    "metadata": {},
    "outputs": [
